# bop_dataset_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt
bop_dataset_utils/: __init__.py  _cfg.py  cfg.py
bop_dataset_utils/_bop_toolkit_lib/: inout.py  misc.py  pycoco_utils.py
bop_dataset_utils/_bop_toolkit_lib/dataset/: bop_imagewise.py  bop_scenewise.py  bop_webdataset.py  convert_imagewise_to_webdataset.py  convert_scenewise_to_imagewise.py
bop_dataset_utils/_pose_estimators/cosypose/cosypose/: config.py
bop_dataset_utils/_pose_estimators/cosypose/cosypose/datasets/: utils.py
bop_dataset_utils/_pose_estimators/megapose/: config.py
bop_dataset_utils/datasets/: augmentations.py  bop_object_datasets.py  bop_scene_dataset.py  datasets_cfg.py  deepim_modelnet.py  gso_dataset.py  modelnet_object_dataset.py  object_dataset.py  pickle_dataset.py  pose_dataset.py  samplers.py  scene_dataset.py  scene_dataset_wrappers.py  shapenet_object_dataset.py  synthetic_dataset.py  urdf_dataset.py  utils.py  web_scene_dataset.py
bop_dataset_utils/lib3d/: cropping.py  distances.py  rigid_mesh_database.py  symmetries.py  transform_ops.py
bop_dataset_utils/toolbox/datasets/: augmentations.py  bop_object_datasets.py  bop_scene_dataset.py  datasets_cfg.py  deepim_modelnet.py  gso_dataset.py  modelnet_object_dataset.py  object_dataset.py  pickle_dataset.py  pose_dataset.py  samplers.py  scene_dataset.py  scene_dataset_wrappers.py  shapenet_object_dataset.py  synthetic_dataset.py  urdf_dataset.py  web_scene_dataset.py
bop_dataset_utils/toolbox/lib3d/: cropping.py  distances.py  rigid_mesh_database.py  symmetries.py  transform_ops.py
bop_dataset_utils/toolbox/utils/: conversion.py  distributed.py  download.py  memory.py  tensor_collection.py  transform_utils.py
bop_dataset_utils/utils/: conversion.py  distributed.py  download.py  tensor_collection.py
