[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[dependency-groups]
dev = [
  "coverage[toml]>=7.6.4",
  "pre-commit>=4.0.1",
  "ruff>=0.2.1"
]
docs = [
  "myst-parser>=4.0.0",
  "sphinx>=8.1.3"
]

[project]
classifiers = ["License :: OSI Approved :: BSD License"]
dependencies = [
  "beautifulsoup4",
  "httpx",
  "imageio",
  "ipython",
  "joblib",
  "roma",
  "tqdm",
  "transforms3d",
  "trimesh",
  "webdataset",
  "numpy",
  "pandas",
  "pin",
  "pillow",
  "psutil",
  "pyaml",
  "opencv-python",
  "torch",
  "torchvision",
  "roma"
]
description = "Utils for loading BOP datasets."
name = "bop_dataset_utils"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.tomlsort]
all = true
